added html webpack plugin

--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,10 @@
         <meta name="twitter:image" content="">
 
         <title>App Title</title>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" href="./static/css/bundle.css">
-        <!-- For production: <link rel="stylesheet" href="./public/css/bundle.min.css"> -->
+        <link rel="stylesheet" href="/css/bundle.css">
     </head>
     <body> 
         <div id="app"></div>
-        <script src="./static/js/bundle.js"></script>
-        <!-- For production: <script src="./public/js/bundle.min.js"></script> -->
+        <script src="/js/bundle.js"></script>
     </body>
 </html>
