--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html lang="en-US"> 
+<html lang="en-us"> 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <meta name="author" content="">
-        <meta name="keywords" content="">
-        <meta name="description" content="">
-
-        <meta property="og:title" content="">
-        <meta property="og:type" content="website">
-        <meta property="og:site_name" content="">
-        <meta property="og:url" content="">
-        <meta property="og:description" content="">
-
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:url" content="">
-        <meta name="twitter:title" content="">
-        <meta name="twitter:description" content="">
-        <meta name="twitter:image" content="">
-
-        <title>App Title</title>
+        <meta name="twitter:site" content="">
+        <meta property="og:url" content="/">
+        <meta property="og:title" content="">
+        <meta property="og:description" content="">
+        <meta property="og:image" content="">
+        <meta name="description" content="">
+        <title>Webpack and Reactjs</title>
     </head>
-    <body> 
+    <body>
         <div id="app"></div>
     </body>
 </html>
